[gd_scene load_steps=3 format=3 uid="uid://da4ger7bvxcfa"]

[ext_resource type="Script" path="res://InventoryAndItems/Scripts/inventory_slot.gd" id="1_57h33"]
[ext_resource type="Texture2D" uid="uid://b1dbrekgviyr1" path="res://Assets/inventory_slot.png" id="1_dl3vy"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 3
anchor_left = 0.031
anchor_top = 0.056
anchor_right = 0.156
anchor_bottom = 0.283
offset_left = 0.0799999
offset_top = -0.0799999
offset_right = -19.92
offset_bottom = -20.94
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57h33")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("1_dl3vy")

[node name="Icon" type="Sprite2D" parent="TextureRect"]

[node name="SlotButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="mouse_entered" from="SlotButton" to="." method="_on_slot_button_mouse_entered"]
[connection signal="mouse_exited" from="SlotButton" to="." method="_on_slot_button_mouse_exited"]
